<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ServerPort">Server Port</string>
    <string name="ServerHost">Server Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="f">Female</string>
    <string name="m">Male</string>
    <string name="mapFragmentMessage">Click on a marker to see event details</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="eventTitle">Event</string>
    <string name="familyTitle">Family</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="storyLines">Life Story Lines\nShow life story lines</string>
    <string name="logout">Logout</string>
    <string name="famTree">Family Tree Lines\nShow family tree lines</string>
    <string name="spouseLine">Spouse Lines\nShow spouse Lines</string>
    <string name="dadSide">Father\'s Side\nShow father\'s side of family</string>
    <string name="momSide">Mother\'s Side\nShow mother\'s side of family</string>
    <string name="maleLines">Male Events\nShow events based on gender</string>
    <string name="femaleLines">Female Events\nShow events based on gender</string>
    <string name="settings">Settings</string>
</resources>