<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="login" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/serverHostTextView"
                    android:text="@string/ServerHost"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/serverHostEditText"
                    android:inputType="text|number"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/serverPortTextView"
                    android:text="@string/ServerPort"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/serverPortEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/usernameTextView"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/usernameEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/passwordTextView"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/firstNameTextView"
                    android:text="@string/firstName"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lastNameTextView"
                    android:text="@string/lastName"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/emailTextView"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/gender"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/genderGroup">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m"
                        android:id="@+id/male"
                        android:checked="true"
                    />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f"
                        android:id="@+id/female"/>

                </RadioGroup>

            </TableRow>

            <LinearLayout>
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerButton" />
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginButton" />
            </LinearLayout>

        </TableLayout>


    </RelativeLayout>
